--- a/source/renderer/app/i18n/locales/en-US.json
+++ b/source/renderer/app/i18n/locales/en-US.json
@@ -465,6 +465,18 @@
   "staking.stakePools.search.delegatingListTitle": "Staking pools you are delegating to",
   "staking.stakePools.search.listTitle": "Stake pools ({pools})",
   "staking.stakePools.search.searchInputPlaceholder": "Search stake pools",
+  "staking.stakePools.tableHeader.cost": "Cost (ADA)",
+  "staking.stakePools.tableHeader.margin": "Margin",
+  "staking.stakePools.tableHeader.performance": "Performance",
+  "staking.stakePools.tableHeader.pledge": "Pledge",
+  "staking.stakePools.tableHeader.potentialRewards": "Potential rewards",
+  "staking.stakePools.tableHeader.producedBlocks": "Produced Blocks",
+  "staking.stakePools.tableHeader.rank": "Rank",
+  "staking.stakePools.tableHeader.retiring": "Retiring in",
+  "staking.stakePools.tableHeader.roi": "Roi",
+  "staking.stakePools.tableHeader.saturation": "Saturation",
+  "staking.stakePools.tableHeader.ticker": "Ticker",
+  "staking.stakePools.tableHeader.uptime": "Uptime (days)",
   "staking.stakePools.tooltip.copyIdTooltipLabel": "Copy the stake pool ID",
   "staking.stakePools.tooltip.costPerEpoch": "Cost per epoch:",
   "staking.stakePools.tooltip.costPerEpochTooltip": "Fixed operational costs that the stake pool retains from any rewards earned during each epoch. ",
